--- a/src/main/resources/templates/mapanotas/lancar_notas.html
+++ b/src/main/resources/templates/mapanotas/lancar_notas.html
@@ -18,7 +18,7 @@
 								var flag = [[${param.sucesso}]]; 
 							    window.onload = function() {
 							        if(flag){
-							  			alertify.success('Nota Cadastrada com sucesso!');
+							  			alertify.success('Nota Lançada com sucesso!');
 							        }
 								};
 							/*]]>*/
@@ -106,7 +106,7 @@
 
 			if(criterioAvaliacaoID != -1){
 				var quantidade_avaliacoes = [[${criterioAvaliacao.quantidadeAvaliacao}]]; 
-				var quantidade_notas = [[${criterioAvaliacao.quantidadeNotas}]].split(",");
+				var quantidade_notas = [[${criterioAvaliacao.quantidadeNotas}]].split("|");
 				for (let i = 0; i<quantidade_avaliacoes;i++){	
 					let count = i+1;
 					let inputs = "";
@@ -123,7 +123,7 @@
 					   		  "<div class='row justify-content-center'>"+
 									"<div class='col-8'>"+
 										"<div class='form-group' >"+
-					                                "<label for='bim-"+count+ "' class='col-form-label text-right'> "+count+" Bimestre</label>"+
+					                                "<label for='bim-"+count+ "' class='col-form-label text-right'> "+count+" Avaliação</label>"+
 					                                "<div class='controls'>"+
 					                                	inputs+
 					                                "</div>"+
