--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -495,9 +495,11 @@
 					</div>
 					<div class="jumbotron col-lg-9 defesas-detalhe"
 						style="box-sizing: border-box !important; background-color: #eceff5 !important; padding: 2em 1em !important; border-radius: 5px !important; width: 100% !important;">
-						<h5
+						<h5 th:if="${#lists.isEmpty(dataPesquisa)}"
 							style="font-size: 1.5em !important; padding-bottom: .5em !important;">Próximas
 							defesas</h5>
+						<h5 th:if="${not #lists.isEmpty(dataPesquisa)}" th:text="${dataPesquisa}"
+							style="font-size: 1.5em !important; padding-bottom: .5em !important;"></h5>
 						<table id="tabela_defesas"
 							class="table table-hover table-striped table-bordered table-click"
 							style="display: flex !important; align-items: center !important; width: 100% !important; flex-direction: column;">
