--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -257,7 +257,7 @@
 		  			}
 		        }else{
 		        	if([[${param.tipo}]]=="1"){
-		        		alertify.error('Nenhuma opção selecionada!');
+		        		alertify.error('Opção não selecionada!');
 		        	}else if([[${param.tipo}]]=="2"){
 		        		alertify.error('Erro ao gerar PDF!');
 		        	}
@@ -462,18 +462,32 @@
 								style="text-align: left !important; padding: 0 .5em !important;">
 
 								<div class="form-group offset-md-2 offset-sm-1">
+									<h6 style="text-align: left !important;">Curso</h6>
+									<div class="form-check row">
+										<input class="form-check-input" type="radio" name="cursos"
+											id="edital" value="1"> <label
+											class="form-check-label" for="avaliacao1"> Informática</label>
+									</div>
+									<div class="form-check row">
+										<input class="form-check-input" type="radio" name="cursos"
+											id="edital" value="2"> <label
+											class="form-check-label" for="avaliacao1"> Ciência da Computação</label>
+									</div>
+								</div>
+								<div class="form-group offset-md-2 offset-sm-1">
+									
+									<h6 style="text-align: left !important;">Documento</h6>
 									<div class="form-check row">
 										<input class="form-check-input" type="radio" name="options"
 											id="edital" value="1"> <label
 											class="form-check-label" for="avaliacao1"> Edital de
-											defesa</label>
+											defesas</label>
 									</div>
 									<div class="form-check row">
 										<input class="form-check-input" type="radio" name="options"
 											id="ataDefesa" value="2"> <label
 											class="form-check-label" for="avaliacao2"> Ata de
 											defesa</label>
-
 									</div>
 								</div>
 								<select style="margin: 0 1em !important; width: 85%;"
