--- a/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
@@ -26,39 +26,113 @@
 <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
 <title>GTCC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script th:inline="javascript">
+			var agendamentoLista= [[${agendamentoLista}]];
+		</script>
 <script>
 
 	document.addEventListener('DOMContentLoaded', function() {
-		(function() {
+		(function () {
 			var just_stop;
-
+			var mes, ano, dia;
 			$('#datepicker').datepicker();
-
-			window.clone_out = function(subject) {
+							
+			window.clone_out = function (subject) {
 				var $subject;
 				$subject = $(subject);
 				$($subject.html()).appendTo('body');
 				$subject.remove();
-				return $('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
-			};
-
-			window.stop_it = function(e) {
 				console.log('hey', this);
 				$(this).toggleClass('ui-state-active');
+				$(this).attr('data-target', '.bd-example-modal-lg');
+				$(this).attr('data-toggle', 'modal');
+				$('.bd-example-modal-lg').modal('toggle');
+				
+				mes = $(this).parent('td').attr('data-month');
+				ano = $(this).parent('td').attr('data-year');
+				dia = $(this).text();
+				
+				mes = parseInt(mes) + 1;
+				
+				console.log(dia + "-" + mes + "-" + ano);
+				if(dia < 10){
+					dia = "0" + dia;
+				}
+				if(mes < 10){
+					mes = "0" + mes;
+				}
+				var datadefesa = ano+'-0'+mes+'-'+dia;
+				
+				
+				
+				return $('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
+			};
+			window.stop_it = function (e) {
+				console.log('hey', this);
+				$(this).toggleClass('ui-state-active');
+				$(this).attr('data-target', '.bd-example-modal-lg');
+				$(this).attr('data-toggle', 'modal');
+				$('.bd-example-modal-lg').modal('toggle');
+				
+				mes = $(this).parent('td').attr('data-month');
+				ano = $(this).parent('td').attr('data-year');
+				dia = $(this).text();
+				
+				mes = parseInt(mes) + 1;
+				
+				console.log(dia + "-" + mes + "-" + ano);
+				
+				if(dia < 10){
+					dia = "0" + dia;
+				}
+				if(mes < 10){
+					mes = "0" + mes;
+				}
+				
+				var datadefesa = ano+'-'+mes+'-'+dia;
+				
+				console.log(agendamentoLista);
+				var i;
+				var agendamentosLista = [];
+				for(i of agendamentoLista){
+					if(i.dataDefesa == datadefesa){
+						agendamentosLista.push(i);
+					}
+				}
 				//e.preventDefault()
 				e.stopPropagation();
 				return false;
 			};
-
-			just_stop = function(e) {
-				e.stopPropagation();
-				return false;
+			just_stop = function (e) {
+				console.log('hey', this);
+				$(this).toggleClass('ui-state-active');
+				$(this).attr('data-target', '.bd-example-modal-lg');
+				$(this).attr('data-toggle', 'modal');
+				$('.bd-example-modal-lg').modal('toggle');
+				
+				mes = $(this).parent('td').attr('data-month');
+				ano = $(this).parent('td').attr('data-year');
+				dia = $(this).text();
+				
+				mes = parseInt(mes) + 1;
+				
+				console.log(dia + "-" + mes + "-" + ano);
+				
+				if(dia < 10){
+					dia = "0" + dia;
+				}
+				if(mes < 10){
+					mes = "0" + mes;
+				}
+				
+				var datadefesa = ano+'-'+mes+'-'+dia;
+				
 			};
-
 			$('body').on('click', '.ui-datepicker-calendar > tbody > tr > td a.ui-state-default', stop_it);
-				$('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
-			}).call(this);
-		}, false);
+			$('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
+		}).call(this);
+	}, false);
 	
 </script>
 
@@ -82,9 +156,9 @@
 
 <body>
 	<section class="main-content" layout:fragment="content">
-		<div id="wrap" class="container">
+		<div id="wrap" class="container" style="max-width: 1600px !important;">
 			<div class="defesa container"
-				style="width: 100% !important; background-color: #e5e5e5; box-sizing: border-box !important; padding: 2em;">
+				style="max-width: 1600px !important; background-color: #e5e5e5; box-sizing: border-box !important; padding: 2em;">
 				<h3
 					style="text-align: center !important; font-size: 2em !important; margin: 1em auto 1em !important; box-sizing: border-box !important;">Agendamento
 					de defesas</h3>
@@ -92,7 +166,8 @@
 					<div class="col-lg-3" style="width: 100%;">
 						<div class="jumbotron">
 							<div class="row justify-content-center">
-								<h5>Calendário</h5>
+								<h5
+									style="text-align: left !important; margin: 0px !important; padding-top: 0px !important; padding-bottom: 1em; font-size: 1.25em;">Calendário</h5>
 								<div id="datepicker"></div>
 								<div class="container" id="main"></div>
 							</div>
@@ -258,6 +333,65 @@
 									</div>
 								</div>
 							</div>
+						</div>
+						<!-- Modal data defesa -->
+						<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+						  <div class="modal-dialog modal-lg">
+						    <div class="modal-content">
+						            <div class="modal-header">
+						                <h5 class="modal-title" id="defesaModalLabel">Defesa</h5>
+						            </div>
+						            <div class="modal-body">
+						                <table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click"
+						                    style="display: flex !important;align-items: center !important;width: 100% !important;flex-direction:column;">
+						
+						                    <thead
+						                        style="width: 100% !important; display:flex; justify-content: space-between; background-color: #fff !important; border:none; border-radius: 5px !important;padding: 1em !important;">
+						                        <tr style="width: 100% !important; display:flex; justify-content: space-between;">
+						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Data
+						                            </th>
+						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class=""> Orientando
+						                            </th>
+						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Horário
+						                            </th>
+						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Local
+						                            </th>
+						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Ações
+						                            </th>
+						                        </tr>
+						                    </thead>
+						
+						                    <tbody style="width:100%">
+						                        <tr id="bodyModalTabela" th:if="${not #lists.isEmpty(agendamentosLista)}" th:each="agendamento : ${agendamentosLista}">
+						                            <td width="15%" th:text="${#temporals.format(agendamento.dataDefesa, 'dd/MM/yyyy')}"></td>
+						                            <td width="30%"th:text="${agendamento.fichaIdentificacao.aluno.nome}"></td>
+						                            <td width="20%" style="text-align:left !important; padding: 0.75rem 2.75em !important;" th:text="${agendamento.horario}"></td>
+						                            <td width="20%" style="text-align:center !important;"th:text="${agendamento.local}"></td>
+						                            <td width="15%">
+						                                <div class="btn-group pull-right">
+						                                    <a class="btn btn-sm btn-warning"
+						                                        th:href="@{/gtcc/agendamentodefesa/detalhes/{id}(id=${agendamento.id})}">Detalhes</a>
+						                                    <a class="btn btn-sm btn-primary"
+						                                        th:href="@{/gtcc/agendamentodefesa/editar/{id}(id=${agendamento.id})}">Editar</a>
+						                                </div>
+						                            </td>
+						                        </tr>
+						                        <tr th:if="${#lists.isEmpty(agendamentosLista)}">
+						                            <td colspan="6">
+						                                <div class="alert alert-info" style="background-color: #f1f3f5;" role="alert">
+						                                    Nenhuma defesa cadastrada encontrada.
+						                                </div> 
+						                            </td>
+						                        </tr>
+						                    </tbody>
+						                    <tfoot> </tfoot>
+						                </table>
+						            </div>
+						            <div class="modal-footer">
+						                <button type="button" class="btn btn-secondary" data-dismiss="modal">Sair</button>
+						            </div>
+						        </div>
+						    </div>
 						</div>
 					</div>
 				</div>
