--- a/src/main/resources/templates/agendamentodefesa/visualizarDefesa.html
+++ b/src/main/resources/templates/agendamentodefesa/visualizarDefesa.html
@@ -30,40 +30,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script>
 
-	document.addEventListener('DOMContentLoaded', function () {
-		(function () {
-			var just_stop;
-
-			$('#datepicker').datepicker();
-
-			window.clone_out = function (subject) {
-				var $subject;
-				$subject = $(subject);
-				$($subject.html()).appendTo('body');
-				$subject.remove();
-				return $('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
-			};
-
-			window.stop_it = function (e) {
-				console.log('hey', this);
-				$(this).toggleClass('ui-state-active');
-				//e.preventDefault()
-				e.stopPropagation();
-				return false;
-			};
-
-			just_stop = function (e) {
-				e.stopPropagation();
-				return false;
-			};
-
-			$('body').on('click', '.ui-datepicker-calendar > tbody > tr > td a.ui-state-default', stop_it);
-			
-			$('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
-
-		}).call(this);
-	}, false);
-	
+$(function() {
+    var mes, ano, dia;
+    $("#datepicker").datepicker({
+        dateFormat: 'dd/mm/yy',
+        dayNames: ['Domingo','Segunda','Terça','Quarta','Quinta','Sexta','Sábado','Domingo'],
+        dayNamesMin: ['D','S','T','Q','Q','S','S','D'],
+        dayNamesShort: ['Dom','Seg','Ter','Qua','Qui','Sex','Sáb','Dom'],
+        monthNames: ['Janeiro','Fevereiro','Março','Abril','Maio','Junho','Julho','Agosto','Setembro','Outubro','Novembro','Dezembro'],
+        monthNamesShort: ['Jan','Fev','Mar','Abr','Mai','Jun','Jul','Ago','Set','Out','Nov','Dez']
+    })
+    $(this).each(function() {
+    	 $("td").click(function(){
+    		 $(this).each(function() {
+    			console.log('hey', this);
+    			$(this).toggleClass('ui-state-active');
+    			$(this).attr('data-target', '.bd-example-modal-lg');
+    			$(this).attr('data-toggle', 'modal');
+    			$('.bd-example-modal-lg').modal('toggle');
+    			
+    			mes = $(this).parent('td').attr('data-month');
+    			ano = $(this).parent('td').attr('data-year');
+    			dia = $(this).text();
+    		 });
+    	  });
+    });
+   
+});
 </script>
 	
 <script type="text/javascript">
