--- a/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
@@ -28,7 +28,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script th:inline="javascript">
-			var agendamentoLista= [[${agendamentoLista}]];
+			var agendamentosLista= [[${agendamentoLista}]];
 		</script>
 <script>
 $(function() {
@@ -119,8 +119,9 @@ $(function() {
 							<div class="form-group row justify-content-center">
 								<div class="field-wrapper controls col-sm-12 col-sm-12">
 									<input type="text" name="titulo" id="titulo"
-										class="form-control"
-										th:field="*{fichaIdentificacao.tituloTrabalho}">
+										class="form-control" th:field="*{fichaIdentificacao.tituloTrabalho}"
+										autofocus="autofocus" aria-label="Título do Trabalho"
+										aria-describedby="basic-addon1" >
 									<div class="field-placeholder">
 										<span>Título do trabalho*</span>
 									</div>
@@ -286,7 +287,7 @@ $(function() {
 						                    </thead>
 						
 						                    <tbody style="width:100%">
-						                        <tr id="bodyModalTabela" th:if="${not #lists.isEmpty(agendamentosLista)}" th:each="agendamento : ${agendamentosLista}">
+						                        <tr id="bodyModalTabela" th:if="${not #lists.isEmpty(agendamentoLista)}" th:each="agendamento : ${agendamentoLista}">
 						                            <td width="15%" th:text="${#temporals.format(agendamento.dataDefesa, 'dd/MM/yyyy')}"></td>
 						                            <td width="30%"th:text="${agendamento.fichaIdentificacao.aluno.nome}"></td>
 						                            <td width="20%" style="text-align:left !important; padding: 0.75rem 2.75em !important;" th:text="${agendamento.horario}"></td>
@@ -300,7 +301,7 @@ $(function() {
 						                                </div>
 						                            </td>
 						                        </tr>
-						                        <tr th:if="${#lists.isEmpty(agendamentosLista)}">
+						                        <tr th:if="${#lists.isEmpty(agendamentoLista)}">
 						                            <td colspan="6">
 						                                <div class="alert alert-info" style="background-color: #f1f3f5;" role="alert">
 						                                    Nenhuma defesa cadastrada encontrada.
