--- a/src/main/resources/templates/mapanotas/index.html
+++ b/src/main/resources/templates/mapanotas/index.html
@@ -37,7 +37,7 @@
 						</div>
 					</form>
                 <div class="table-responsive">
-				  <table id="table" class="table table-hover table-bordered">
+				  <table id="table" class="table table-hover table-bordered table-striped">
 				  	<thead class="thead-dark">
 					    <tr id="basic-informations">
 					      <th scope="col">RA</th>
